[*]#SQUAD-315 - Changing app color (preloader)

--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectPlaceholder/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectPlaceholder/style.module.sass
@@ -1,7 +1,7 @@
 .wrapper
   padding-top: 14px
   padding-bottom: 14px
-  border-bottom: 1px solid lighten(#838995, 30%)
+  //border-bottom: 1px solid lighten(#838995, 30%)
   height: 72px
 
 .container
@@ -11,10 +11,10 @@
   height: 40px
   width: 40px
   border-radius: 50%
-  background-color: lightgray
+  //background-color: lightgray
 
 .tittle_container
-  background-color: lightgray
+  //background-color: lightgray
   width: 70%
   height: 20px
 
