[*]#SQUAD-315 - Changing app color (modal windows)

--- a/src/components/Modal/_components/ModalCloseConfirm/style.module.sass
+++ b/src/components/Modal/_components/ModalCloseConfirm/style.module.sass
@@ -1,6 +1,5 @@
 .overlay
   position: fixed
-  background-color: rgba(73,85,112,0.85)
   opacity: 0
   height: 100%
   width: 100%
@@ -15,7 +14,6 @@
     opacity: 0.9
 
 .wrapper
-  background-color: #fff
   border-radius: 9px
   padding: 40px
   width: 360px
@@ -32,8 +30,7 @@
     opacity: 1
     transform: translateX(-50%) translateY(-50%) scale(1, 1)
 
-.message
-  p
-    font-weight: 400
-    font-size: 26px
-    color: $primary_color
+.text
+  font-weight: 400
+  font-size: 26px
+
