--- a/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarHealinesWrapper/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarHealinesWrapper/style.module.sass
@@ -1,10 +1,11 @@
 .headline
-  border-bottom: 1px solid lighten($light-gray, 5%)
+  //border-bottom: 1px solid lighten($light-gray, 5%)
+  border-bottom: 1px solid
 
-  h2
+  div
     font-size: 18px
     font-weight: 500
     line-height: 16px
-    color: $primary_color
+
 
 
