--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfileTabsWrapper/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfileTabsWrapper/style.module.sass
@@ -4,12 +4,11 @@
   flex-grow: 1
 
 .tittle_container
-  border-bottom: 1px solid #d7d7d7
+  border-bottom: 1px solid
 
 .title
   font-size: 19px
   line-height: 16px
-  color: $primary_color
   font-weight: 400
 
 .tab
