--- a/src/components/Modal/_components/DeprecatedLinkMessage/style.module.sass
+++ b/src/components/Modal/_components/DeprecatedLinkMessage/style.module.sass
@@ -1,22 +1,18 @@
 .wrapper
   position: relative
   padding: 40px
-  background-color: #fff
   border-radius: 9px
   box-shadow: 0 2px 10px 0rgba(0,0,0,0.11)
 
-.message
-  article
-    font-weight: 400
-    font-size: 26px
-    color: $primary_color
-    text-align: center
+.article
+  font-weight: 400
+  font-size: 26px
+  text-align: center
 
-  p
-    font-weight: 400
-    font-size: 15px
-    color: $primary_color
-    text-align: center
+.text
+  font-weight: 400
+  font-size: 15px
+  text-align: center
 
 .close
   position: absolute
