--- a/src/components/Modal/_components/Handler500/style.module.sass
+++ b/src/components/Modal/_components/Handler500/style.module.sass
@@ -1,28 +1,23 @@
 .wrapper
   position: relative
   width: 100%
+  max-width: 380px
   padding: 24px 24px 8px 24px
-  background-color: #fff
   border-radius: 9px
   box-shadow: 0 2px 10px 0rgba(0,0,0,0.11)
   display: flex
   flex-direction: column
   align-items: center
 
-.container
+.article
+  font-weight: 400
+  font-size: 26px
+  text-align: center
 
-.message
-  article
-    font-weight: 400
-    font-size: 26px
-    color: $primary_color
-    text-align: center
-
-  p
-    font-weight: 400
-    font-size: 15px
-    color: $primary_color
-    text-align: center
+.text
+  font-weight: 400
+  font-size: 15px
+  text-align: center
 
 .button
   max-width: 259px
