--- a/src/components/Form/Dropdown/ColorSelect/style.module.sass
+++ b/src/components/Form/Dropdown/ColorSelect/style.module.sass
@@ -2,17 +2,21 @@
   padding: 5px
   height: 100%
   width: 100%
+  position: relative
 
 .color
+  appearance: none
   width: 25px
   height: 25px
   border: none
   cursor: pointer
   background: none
   border-radius: 50%
-  position: relative
 
 .checkMark
+  position: absolute
+  top: 35%
+  left: 35%
   width: 12px
   height: 10px
 
