[+]#SQUAD-323 - Added list of team users

--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserTeams/_components/UserTeamsLIstOfUsers/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserTeams/_components/UserTeamsLIstOfUsers/style.module.sass
@@ -1,8 +1,7 @@
 .headlines
   display: flex
   border-bottom: 1px solid
-  padding-bottom: 13px
-  padding-top: 32px
+  align-items: center
 
 .name
   max-width: 294px
@@ -25,3 +24,10 @@
   font-size: 15px
   line-height: 22px
   font-weight: 400
+  align-self: center
+
+.logo
+  width: 32px
+  height: 32px
+  border-radius: 50%
+
