[*]#SQUAD-323 - Fixed edit team view

--- a/src/components/Form/Dropdown/ColorSelectFormik/style.module.sass
+++ b/src/components/Form/Dropdown/ColorSelectFormik/style.module.sass
@@ -5,6 +5,9 @@
   background: none
   position: relative
 
+.menu
+  height: 25px
+
 .list
   background-color: #fff
   padding: 9px
@@ -23,4 +26,4 @@
   height: 0
   position: absolute
   top: -4%
-  right: 10%
+  right: 13%
