--- a/src/styles/_buttons.sass
+++ b/src/styles/_buttons.sass
@@ -1,11 +1,11 @@
 $className: btn
 
 .#{$className}
-  border: none //TODO delete
+  border: none
   margin: 16px 0
   text-align: center
   cursor: pointer
-  background: none //TODO delete
+  background: none
   transition: all .2s ease-in-out
 
 //Colors
