--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
@@ -7,10 +7,11 @@
   height: 100px
 
 .avatar
-  width: 99%
-  height: 99%
+  width: 100%
+  height: 100%
   background-color: #82ABFB
   border-radius: 50%
+  position: relative
 
   &_placeholder
     color: #fff
@@ -38,3 +39,7 @@
   font-size: 14px
   font-weight: 400
   line-height: 16px
+
+.spinner
+  position: absolute
+
